--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
